@@ -8,6 +8,13 @@
 	  exchange-rate dialog on "search ledger" registers.
 	Fixes #113987
 
+	* src/engine/QueryCore.[ch]: create a new GUID_MATCH_LIST_ANY
+	  match-type, which can eventually be used to make an AccountGroup
+	  comparrison (once we figure out how to label an account group with
+	  a GUID)
+	* src/engine/QueryNew.c: print out GUID_MATCH_LIST_ANY query terms
+	* src/engine/gw-engine-spec.scm: wrap GUID_MATCH_LIST_ANY
+
 2003-06-14  Chris Lyttle  <chris@wilddev.net>
 
 	* src/scm/help-topics-index.scm: add Jon Lapham's patch
